# portfolio

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
portfolio/: main.py
portfolio/static/css/: style.css  style.css.map  style.sass  style_old.css
portfolio/templates/: index.html  style.css
