[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Stephan Schmiedmayer <56692976+StephanSchmiedmayer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
